--- a/index.html
+++ b/index.html
@@ -7,17 +7,34 @@
     <title>Planned Planthood</title>
   </head>
   <body>
-Planned Planthood
+    <header>
+      <img src="./Asstes/images/lofo.svg"/>
+      <h1>Planned Planthood</h1>
+      <nav>
+        <ul>
+          <li>Hem</li>
+          <li>Historik</li>
+          <li>Tips</li>
+          <li>Kontakt</li>
+        </ul>
+      </nav>
+    </header>
+    
+    <main>
+      <article class="hero"
+      >
+        <h2>Uppskattade växter</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
+        <img src="./Assets/images/main.png"/>
+      </article>
 
-Hem
-Historik
-Tips
-Kontakt
-
-Uppskattade växter
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.
-
+      <form
+      aria-label="Newsletter"
+      >
 Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!
+      </form>
+
+      <article class="grid">
 
 Blommor
 Ätbart
@@ -67,11 +84,16 @@ Ormbunke
 En klassisk växt som passar perfekt i badrummet eller på skuggiga platser.
 Naturvännen
 2024-12-08
+      </article>
 
+      <form>
 Våra tidigare odlingar
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio nam quaerat doloribus?
 Planterade plantor
+      </form role="search">
+    </main>
 
+    <footer>
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam ducimus aut sint atque ullam alias perspiciatis fuga. Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione earum. Iure, eius molestias?
 Telefon: 020-1234567
 info@plannedplant.com
@@ -80,5 +102,6 @@ Hem
 Historik
 Tips
 Kontakt
+    </footer>
   </body>
 </html>
