--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="./Assets/images/lofo.svg"/>
-        <h1>Planned <br>Planthood</h1>
-      </div>
-      <nav>
+      <nav class="primary">
+        <a href="/" class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" width="214" height="210" viewBox="0 0 214 210">
+            <g fill="none" stroke-width="12">
+              <path
+                d="M116.833 193.533C117.406 192.909 117.969 192.279 118.522 191.645L168.173 160.226C206.289 136.107 217.36 86.0907 192.816 48.5247C189.153 42.9185 181.619 41.3343 175.976 44.905L125.764 76.6782C121.37 70.1605 116.086 64.0725 109.92 58.5872L52.4904 7.49831C46.8526 2.48295 38.1677 2.90777 33.061 8.46735C-2.89261 47.6094 0.211903 108.041 39.9737 143.413L97.4031 194.502C103.041 199.517 111.726 199.092 116.833 193.533Z" />
+              <path
+                d="M115.122 194.336C115.527 193.897 115.927 193.455 116.319 193.009L153.69 169.521C182.93 151.143 191.451 112.997 172.598 84.3362C169.529 79.6722 163.25 78.3762 158.555 81.3272L121.425 104.664C118.17 100 114.303 95.6362 109.83 91.6843L66.4654 53.3677C61.8146 49.2582 54.6598 49.6021 50.4409 54.1641C22.9065 83.9378 25.2893 129.917 55.732 156.816L99.097 195.132C103.748 199.242 110.903 198.898 115.122 194.336Z" />
+            </g>
+          </svg>
+          <span>Planned<br>Planthood</span>
+        </a>
         <ul>
           <li href="#">Hem</li>
           <li href="#">Historik</li>
@@ -24,12 +31,12 @@
     
     <main>
       <section class="hero">
-        <h2>Uppskattade växter</h2>
+        <h1>Uppskattade växter</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
         <img src="./Assets/images/main.png"/>
       </section>
 
-      <form aria-label="Newsletter">
+      <form aria-label="newsletter" class="newsletter">
         <div>
           <p>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</p>
           <input/>
@@ -118,8 +125,8 @@
         </div>
       </section>
 
-      <form role="search">
-        <h3>Våra tidigare odlingar</h3>
+      <form role="search" class="search">
+        <h2>Våra tidigare odlingar</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio nam quaerat doloribus?
           Planterade plantor</p>
       </form>
@@ -129,7 +136,7 @@
       <section>
         <div>
           <img src="./Assets/images/lofo.svg"/>
-          <h4>Planned Planthood</h4>
+          <h3>Planned Planthood</h3>
         </div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing 
           elit. Neque, veniam ducimus aut sint atque 
