New pics and test grid

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 d="M115.122 194.336C115.527 193.897 115.927 193.455 116.319 193.009L153.69 169.521C182.93 151.143 191.451 112.997 172.598 84.3362C169.529 79.6722 163.25 78.3762 158.555 81.3272L121.425 104.664C118.17 100 114.303 95.6362 109.83 91.6843L66.4654 53.3677C61.8146 49.2582 54.6598 49.6021 50.4409 54.1641C22.9065 83.9378 25.2893 129.917 55.732 156.816L99.097 195.132C103.748 199.242 110.903 198.898 115.122 194.336Z" />
             </g>
           </svg>
-          <span>Planned<br>Planthood</span>
+          <h1>Planned<br>Planthood</h1>
         </a>
         <ul class="nav_primary">
           <li href="#">Hem</li>
@@ -31,14 +31,25 @@
     
     <main>
       <section class="hero">
-        <h1>Uppskattade växter</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
-        <img src="./Assets/images/main.png"/>
+        <h2>Uppskattade växter</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur 
+          adipisicing elit. Similique, corporis ipsum.
+        </p>
+        <div class="hero__img">
+          <img src="./Assets/images/col_1.png"/>
+          <img src="./Assets/images/col_2.png"/>
+          <img src="./Assets/images/col_3.png"/>
+          <img src="./Assets/images/col_4.png"/>
+          <img src="./Assets/images/col_5.png"/>
+          <img src="./Assets/images/col_6.png"/>
+        </div>
       </section>
 
       <form aria-label="newsletter" class="newsletter">
         <div>
-          <p>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</p>
+          <p>Anmäl dig till vårt nyhetsbrev så du inte missar 
+            en utsådd!
+          </p>
           <input/>
         </div>
           <svg
