--- a/index.html
+++ b/index.html
@@ -36,12 +36,19 @@
           adipisicing elit. Similique, corporis ipsum.
         </p>
         <div class="hero__img">
-          <img src="./Assets/images/col_1.png"/>
-          <img src="./Assets/images/col_2.png"/>
-          <img src="./Assets/images/col_3.png"/>
-          <img src="./Assets/images/col_4.png"/>
-          <img src="./Assets/images/col_5.png"/>
-          <img src="./Assets/images/col_6.png"/>
+          <img src="./Assets/images/col_1.jpg" alt="dandelion"
+          data-type="featured-1"/>
+          <img src="./Assets/images/col_2.jpg" alt="berries"
+          data-type="featured-2"/>
+          <img src="./Assets/images/col_3.jpg" alt="cactus"
+          data-type="featured-3"/>
+          <img src="./Assets/images/col_4.jpg" alt="ferns"
+          data-type="featured-4"/>
+          <img src="./Assets/images/col_5.jpg" alt="purple flowers"
+          data-type="featured-5"/>
+          <img src="./Assets/images/col_6.jpg" alt="begonias"
+          data-type="featured-6"/>
+          
         </div>
       </section>
 
